// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Label /> matches snapshot 1`] = `
<styled.label
  className="nulla aut sunt est rerum at sint"
  htmlFor="3d4e59ed-eec4-406f-9f73-2a072edb7370"
>
  <div
    key="2d9e9bcc-f46a-4516-8896-4ffea6ae8c41"
  >
    autem et modi tenetur amet modi reprehenderit
  </div>
</styled.label>
`;

exports[`<Label /> matches snapshot 2`] = `
<styled.label
  className="voluptatem est eius dolorem amet quia quia"
  htmlFor="0eb19c9d-f4c7-45c8-8ec3-9a2d7cbe5515"
>
  <div
    key="db27b158-9f4a-456b-b681-86e8d13d38d9"
  >
    quos eum voluptate sit saepe assumenda deserunt
  </div>
</styled.label>
`;

exports[`<Label /> matches snapshot 3`] = `
<styled.label
  className="molestiae quas omnis qui illo excepturi esse"
  htmlFor="abcd03b1-37fd-43a9-b071-bf8f05fde2b6"
>
  <div
    key="14569106-585b-44a3-bfc8-21a85a821132"
  >
    et ut voluptatem quia dolor eum velit
  </div>
</styled.label>
`;

exports[`<Label /> matches snapshot 4`] = `
<styled.label
  className="ea necessitatibus sed ea ab doloremque est"
  htmlFor="5880acd5-70bf-4183-af87-118b580816d1"
>
  voluptatum id porro ea numquam consequatur et
  <span
    key="b1528ee7-80ec-49de-b290-25f0a7ae53c8"
  >
    sapiente molestiae dolores voluptas placeat vitae ut
  </span>
</styled.label>
`;

exports[`<Label /> matches snapshot 5`] = `
<styled.label
  className="nihil porro suscipit sit eos maxime at"
  htmlFor="eef9af76-3f20-4c2b-b7eb-701ae5069766"
>
  <span
    key="1b95891f-884c-4e2c-84c1-45c133c18bab"
  >
    itaque qui dolorem voluptatem laboriosam iusto et
  </span>
</styled.label>
`;

exports[`<Label /> matches snapshot 6`] = `
<styled.label
  className="eius quod a nisi et est ab"
  htmlFor="401d4989-5f93-498f-97b2-3148391af1cf"
>
  <div
    key="b572ac0f-b809-4cde-a7d4-77cee5c50a83"
  >
    et optio laborum officia iure eius veritatis
  </div>
</styled.label>
`;

exports[`<Label /> matches snapshot 7`] = `
<styled.label
  className="aliquid iure eos expedita assumenda eligendi aut"
  htmlFor="58450789-1989-4db8-a776-5bbc9a7d810b"
>
  quas consequuntur dolores nihil eligendi sunt aliquid
</styled.label>
`;

exports[`<Label /> matches snapshot 8`] = `
<styled.label
  className="cum qui aut natus aperiam est est"
  htmlFor="4c303851-873d-4c77-b691-e5902ed9b12a"
>
  ipsum et explicabo vel quaerat fuga enim
  <span
    key="0c57ad21-616b-41e7-8168-f8dfd2abfc8d"
  >
    dolores incidunt est nostrum quae et consequatur
  </span>
</styled.label>
`;

exports[`<Label /> matches snapshot 9`] = `
<styled.label
  className="quis esse aut eaque dignissimos incidunt quis"
  htmlFor="236ccf88-300f-4dc5-ac9d-e94510d4ee95"
>
  <div
    key="4f6b9c87-9b03-40f7-9c79-aff692be4fa7"
  >
    nam labore aliquid non a quod rerum
  </div>
</styled.label>
`;

exports[`<Label /> matches snapshot 10`] = `
<styled.label
  className="suscipit fuga non est suscipit dicta ipsum"
  htmlFor="cfa0d251-91d7-4506-b6ad-27428592b695"
>
  <div
    key="f438c5d6-b890-4c81-a28b-9c0d662fecdd"
  >
    aspernatur qui et nam eaque sit porro
  </div>
</styled.label>
`;

exports[`<Label /> matches snapshot 11`] = `
<styled.label
  className="quaerat aut quos ipsum itaque sunt ipsam"
  htmlFor="ead4cb39-8569-456a-b745-fed1cd28cb17"
>
  quisquam aut velit dignissimos tempore aliquam eveniet
</styled.label>
`;

exports[`<Label /> matches snapshot 12`] = `
<styled.label
  className="aut deleniti quas ut ullam natus magnam"
  htmlFor="5b68f8de-ea95-4b7d-951c-e68bcf2a83a7"
>
  corporis praesentium unde omnis rerum voluptatum quaerat
</styled.label>
`;

exports[`<Label /> matches snapshot 13`] = `
<styled.label
  className="cupiditate quis ad asperiores eum est quas"
  htmlFor="9403f33c-2ea7-42b2-8925-9c4c7d87fcad"
>
  <span
    key="f060f5a3-9c10-450a-917f-21c9b5202c2d"
  >
    consequatur perspiciatis ut odio eligendi adipisci omnis
  </span>
</styled.label>
`;

exports[`<Label /> matches snapshot 14`] = `
<styled.label
  className="aliquam officiis consequatur est facilis illum id"
  htmlFor="ff8eddb1-8ab7-4b7e-9dd7-7bb185d69e7e"
>
  sint ea voluptate omnis ratione sed sit
  <div
    key="ba800404-8bc1-4f11-b41c-a84201a11855"
  >
    delectus praesentium sunt numquam iste nisi corporis
  </div>
</styled.label>
`;

exports[`<Label /> matches snapshot 15`] = `
<styled.label
  className="consequatur temporibus est at ex neque aliquid"
  htmlFor="bb3729ac-fbeb-48cc-ab93-d9ca1c4a381e"
>
  <div
    key="1f30b0d6-9d60-4981-824e-2902fad7a049"
  >
    ex quidem hic est voluptatem voluptates reprehenderit
  </div>
</styled.label>
`;

exports[`<Label /> matches snapshot 16`] = `
<styled.label
  className="asperiores magni suscipit numquam voluptas tempora fuga"
  htmlFor="bbaaac4b-09aa-4999-8646-3db6d32e54d9"
>
  ea rerum qui cupiditate repellendus et ut
</styled.label>
`;

exports[`<Label /> matches snapshot 17`] = `
<styled.label
  className="molestias repellendus aperiam aliquam vero voluptate eos"
  htmlFor="5d42c164-fe92-41c8-bd7c-51d543b43744"
>
  qui et totam omnis fugiat illum id
  <span
    key="54f4d8b1-48db-4093-a282-d4e900732184"
  >
    quia ab incidunt ducimus quasi quidem facere
  </span>
</styled.label>
`;

exports[`<Label /> matches snapshot 18`] = `
<styled.label
  className="dolorem sunt dolor ad illo natus et"
  htmlFor="d10c675a-9bbf-4c07-866a-e54deb3741ce"
>
  consequatur eos eligendi at consequatur quia beatae
  <div
    key="37114d08-7153-494e-bfec-ae33a446014d"
  >
    voluptatem numquam voluptatem voluptatum aliquid libero debitis
  </div>
</styled.label>
`;

exports[`<Label /> matches snapshot 19`] = `
<styled.label
  className="molestiae maiores mollitia rerum quia laudantium possimus"
  htmlFor="14feac54-d2bc-44e3-8912-d093837877cd"
>
  <div
    key="44ce0c84-32b0-4263-ab1b-ef648e017138"
  >
    eius laboriosam quia et exercitationem enim voluptatem
  </div>
</styled.label>
`;

exports[`<Label /> matches snapshot 20`] = `
<styled.label
  className="odit et quas numquam est nemo laudantium"
  htmlFor="3f1c2bc6-ac44-4f85-b2f4-fde79efb8cf4"
>
  debitis ratione voluptatem eum et numquam quas
  <div
    key="e81697b8-a580-4717-ae03-1ba53809e176"
  >
    magnam in inventore cum perspiciatis deserunt eligendi
  </div>
</styled.label>
`;

exports[`<Label /> matches snapshot 21`] = `
<styled.label
  className="nam repellendus harum laboriosam exercitationem aut et"
  htmlFor="cc584f8a-eef0-4062-be79-c676be1917e3"
>
  blanditiis consectetur inventore sit facere ut consequatur
  <div
    key="2af49731-0c40-4da3-8bf9-a99f13c3d2de"
  >
    et itaque quis dolor aut dolore sit
  </div>
</styled.label>
`;

exports[`<Label /> matches snapshot 22`] = `
<styled.label
  className="praesentium aut corporis occaecati at corrupti voluptatem"
  htmlFor="72a48d63-53d8-48e4-9645-9b5dc7929f0f"
>
  <div
    key="f4919c73-942a-43d2-a3fe-9464b8fee4c7"
  >
    minus rerum ea velit aliquid natus aut
  </div>
</styled.label>
`;

exports[`<Label /> matches snapshot 23`] = `
<styled.label
  className="est numquam asperiores hic deleniti similique fugiat"
  htmlFor="835015c5-70f9-40a0-be1f-69a874063ad6"
>
  <div
    key="410221d6-a826-4ebc-9917-910ce8ce5dcf"
  >
    at sed eum ut quas similique pariatur
  </div>
</styled.label>
`;

exports[`<Label /> matches snapshot 24`] = `
<styled.label
  className="velit a sed ab eius eos illo"
  htmlFor="efecc0d2-3684-4716-abb9-4c94f151b8df"
>
  expedita iure dolor facere dolorem optio cumque
  <span
    key="11a87d58-7b62-41a6-b481-77a0ba26d44a"
  >
    esse voluptas dolor numquam ea dignissimos reiciendis
  </span>
</styled.label>
`;

exports[`<Label /> matches snapshot 25`] = `
<styled.label
  className="sunt non neque eligendi veritatis enim perferendis"
  htmlFor="0ee4dcb1-5d80-4cd7-bf39-711b94fc23ac"
>
  esse consequatur sint vel ipsa commodi molestiae
</styled.label>
`;

exports[`<Label /> matches snapshot 26`] = `
<styled.label
  className="quia magnam voluptatum eos praesentium ut quibusdam"
  htmlFor="3aa87651-b153-4d8b-8ba6-f2b3b8f1923b"
>
  <div
    key="010fb194-7267-4ed5-9f5a-68f925151296"
  >
    fuga earum perspiciatis ut velit aut sint
  </div>
</styled.label>
`;

exports[`<Label /> matches snapshot 27`] = `
<styled.label
  className="qui molestiae possimus et velit explicabo est"
  htmlFor="aec2f998-cd62-4212-b5a6-5ce5a1c2a8e0"
>
  <div
    key="951d9deb-850c-4e28-ac26-a46ad49bfa99"
  >
    quia delectus repellendus possimus deserunt ullam repellendus
  </div>
</styled.label>
`;

exports[`<Label /> matches snapshot 28`] = `
<styled.label
  className="sed debitis et dolorem debitis doloremque illo"
  htmlFor="90fba868-23ae-4abe-861b-3285ae3e04f3"
>
  dicta odit eum illum libero laborum nam
  <span
    key="b15a88d6-77fd-435a-8a4d-f6d33355d4b1"
  >
    eveniet eveniet deleniti minima omnis praesentium sunt
  </span>
</styled.label>
`;

exports[`<Label /> matches snapshot 29`] = `
<styled.label
  className="et veritatis quos quo voluptas autem nostrum"
  htmlFor="fe730115-5447-4e82-87dc-0d38df055b2e"
>
  <span
    key="a87a915f-8f4d-4209-b5bc-a080f046f8b8"
  >
    et aut aut est sit asperiores culpa
  </span>
</styled.label>
`;

exports[`<Label /> matches snapshot 30`] = `
<styled.label
  className="impedit asperiores voluptatem sequi numquam repellendus tempore"
  htmlFor="d5ce8491-07ee-45d4-9a3d-62ae634274a3"
>
  praesentium voluptatum harum occaecati consequatur cupiditate minima
  <div
    key="7c20b32e-378c-452b-9341-7e8a3806bd0f"
  >
    debitis nemo et sit quo cum commodi
  </div>
</styled.label>
`;

exports[`<Label /> matches snapshot 31`] = `
<styled.label
  className="impedit delectus vitae eos aut est ducimus"
  htmlFor="396fc269-bff7-40dc-a0e8-6b739c95c0e9"
>
  atque in aut vero ut ut asperiores
  <div
    key="81373406-0f26-4771-98d6-d2dd01bbf6fe"
  >
    omnis aut doloribus vel voluptatibus quia eaque
  </div>
</styled.label>
`;

exports[`<Label /> matches snapshot 32`] = `
<styled.label
  className="ipsam fuga dignissimos porro odit et a"
  htmlFor="e842a141-ab1d-4fb7-979a-c4c8c50bd073"
>
  at qui vel at sed a assumenda
</styled.label>
`;
